# rs-math_ast

./: Cargo.toml  README.md
benches/: bench.rs
src/: from.rs  lib.rs
src/ast/: bin_op.rs  expr.rs  mod.rs  un_op.rs
src/lexer/: lexer.rs  mod.rs  token.rs  token_kind.rs  token_value.rs
src/lexer/readers/: function_reader.rs  identifier_reader.rs  mod.rs  number_reader.rs  syntax_reader.rs  variable_reader.rs  whitespace_reader.rs
src/parser/: mod.rs  parser.rs
tests/: test.rs
