[package]
name = "math_ast"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["math", "language", "ast"]
description = "math language ast"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-math_ast.git"
homepage = "https://github.com/nathanfaucett/rs-math_ast"

[dependencies]
lexer = {git = "https://github.com/nathanfaucett/rs-lexer.git"}

[dev-dependencies]
